evoucher-iac/overlays/prod/ingress-resource/ingress-evoucher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evoucher-ingress
  namespace: production
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "evoucher-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    # ADD 2025/03/06 to fix X-Language in the header
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, PATCH, PUT, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Language, Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - b2b.aquavoucher.com
      secretName: b2b.aquavoucher.com
    - hosts:
      - "*.aqua.gift"
      secretName: aqua.gift
  rules:
    - host: smsreport.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sms-callback-receive-cluster-ip-service 
                port:
                  number: 80
    - host: zaloreport.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zalo-callback-receive-cluster-ip-service
                port:
                  number: 80
    - host: ev.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: short-link-service-cluster-ip-service
                port:
                  number: 80
    #- host: admin-urlybud.aqua.gift  # Replace with your desired subdomain or domain
    #  http:
    #    paths:
    #      - path: /
    #        pathType: Prefix
    #        backend:
    #          service:
    #            name: short-link-service-cluster-ip-service
    #            port:
    #              number: 2000
    - host: ev-pos.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pos-api-cluster-ip-service
                port:
                  number: 80
    - host: ev-ui.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ui-cluster-ip-service
                port:
                  number: 80
    - host: b2b.aquavoucher.com  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-cms-ui-cluster-ip-service
                port:
                  number: 80
    - host: ev-img.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: image-server-cluster-ip-service
                port:
                  number: 80
    - host: ev-viewer.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evoucher-api-cluster-ip-service
                port:
                  number: 80
    - host: be.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-api-cluster-ip-service 
                port:
                  number: 80
    - host: ev-sync.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-hook-cluster-ip-service 
                port:
                  number: 80
