evoucher-iac/overlays/prod/ingress-resource/ingress-short-link.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: short-link-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "https://www.aquavoucher.com/"
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "evoucher-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    # ADD 2025/03/06 to fix X-Language in the header
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, PATCH, PUT, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Language, Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
spec:
  #ingressClassName: nginx
  tls:
    - hosts:
      - "*.aqua.gift"
      secretName: aqua.gift
  rules:
    - host: ev.aqua.gift  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /$
            pathType: Exact
            backend:
              service:
                name: frontend-ui-cluster-ip-service
                port:
                  number: 80
